--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,16 @@ pydantic==2.6.4
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
+six==1.16.0
 sniffio==1.3.1
 starlette==0.36.3
 typing_extensions==4.10.0
+tzdata==2024.1
 ujson==5.9.0
 uvicorn==0.28.0
 uvloop==0.19.0
